--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,7 +4,7 @@ config-version: 2
 version: 1.0.0
 
 models:
-  tickets:
+  tickets2:
     +indexes:
       - columns: ["sys_id"]
         type: btree
